=== rmw ChangeLog ===

2016-09-03

	* Fixed: Warning about missing automake 1.14 #21

	* restore_rmw.c: I changed a lot of variable names, re-worked the
	function a little, and did a bit of cleaning.

	* Issuing an early release due to issue #21

-- Aug. 30 --

When building, rmw will now use the config.h that's generated by ./configure.

Added make_dir(), which creates directories when parents don't exist;
used it in several areas for code-cleanup (#18) and added related error
checking (#13).

Removed 2 functions: waste_check() and mkdirErr().

Added THANKS file.

-- Aug. 28 --

Added -std=gnu99 -Wall to the Makefile, cleaned up some warnings

Renamed purgeD() to is_time_to_purge()
Added some error checking to that function

Cleaned up get_config_data a little
Fixed the warning: /functions/config_rmw.c:252:7: warning: ‘cfgPtr’ may be used
 uninitialized in this function [-Wmaybe-uninitialized]
   if (fclose (cfgPtr) == EOF)

Development documentation updated


-- Aug. 24, 2016 --

Adding more error checks

Adding more comments

More (minor) code optimization

-- Aug. 23, 2016 --

Files below protected directories are now protected (not thoroughly tested yet)

I deleted 3 functions and moved their contents to main():
*remove_to_waste()
*pre_rmw_check()
*isProtected()

WASTE directories and the rmw data/config dir is protected by default;
no need to add a separate PROTECT entry to the rmw config file

'function_prototypes.h' renamed to 'primary_funcs.c'

-- Aug. 22, 2016 --

Fine-tuning the error-checking.
https://github.com/andy5995/rmw/issues/13


-- Aug. 20, 2016 --

Added a bunch of error checking, mostly for things that rarely go wrong;
but now if they go wrong, the user (or me) will get to see an error number.

There is still a lot more error-checking that can be added.


-- Aug. 17, 2016 --

Documentation (README) updated and expanded, info added to --help option
(There is no 'man' page yet.

Fixed -B bug (https://github.com/andy5995/rmw/issues/9)
