@@ -1,5 +1,9 @@
 === rmw ChangeLog ===
 
+2016-09-04
+
+	* Issuing another release, due to issue #22
+
 2016-09-03
 
 	* Fixed: Warning about missing automake 1.14 #21
